Fixed layout issues and added SEO

--- a/css/home.css
+++ b/css/home.css
@@ -22,7 +22,7 @@
 
 .hero {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   padding-top: 3rem;
   overflow: hidden;
@@ -294,8 +294,8 @@ svg.active .hero-logo-13 {
 
 .about {
   position: relative;
-  width: 100vw;
-  height: 100svh;
+  width: 100%;
+  height: max-content;
   background: linear-gradient(180deg,
       var(--primary) 0,
       var(--accent) 10%,
@@ -418,7 +418,7 @@ svg.active .hero-logo-13 {
 /* === Services Section === */
 
 .services {
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   padding: 8rem 2rem;
   background: linear-gradient(180deg,
@@ -438,7 +438,7 @@ svg.active .hero-logo-13 {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   display: flex;
   justify-content: center;
@@ -582,7 +582,7 @@ svg.active .hero-logo-13 {
 
 .home-spotlight {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   background-color: var(--primary);
   color: var(--secondary);
@@ -605,7 +605,7 @@ svg.active .hero-logo-13 {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -641,7 +641,7 @@ svg.active .hero-logo-13 {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100svh;
   overflow: hidden;
   z-index: 10;
@@ -678,8 +678,8 @@ svg.active .hero-logo-13 {
 
 .contact {
   position: relative;
-  width: 100vw;
-  height: 100svh;
+  width: 100%;
+  height: max-content;
   background: linear-gradient(180deg,
       var(--primary) 0,
       var(--accent) 10%,
@@ -764,7 +764,7 @@ svg.active .hero-logo-13 {
   background: var(--green-light);
   border-color: var(--primary);
   /* reveal border instead of adding it */
-  color: var(--primary);
+  color: var(--green);
 }
 
 /* Result message */
