--- a/global.css
+++ b/global.css
@@ -117,7 +117,7 @@ a {
 
 p {
   font-family: "Instrument Serif", sans-serif;
-  font-size: 1.125rem;
+  font-size: 1.25rem;
 }
 
 .container {
@@ -146,7 +146,7 @@ p {
   }
 
   p{
-    font-size: 1rem;
+    font-size: 1.125rem;
   }
 
   .container {
